// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Atoms | Flexbox Column sized flexboxes 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 {
  box-sizing: border-box;
  max-width: 25%;
  -webkit-flex-basis: 25%;
  -ms-flex-preferred-size: 25%;
  flex-basis: 25%;
}

.c3 {
  box-sizing: border-box;
  max-width: 50%;
  -webkit-flex-basis: 50%;
  -ms-flex-preferred-size: 50%;
  flex-basis: 50%;
}

.c2 {
  box-sizing: border-box;
  border: 1px solid black;
  background-color: #eee;
  height: 100%;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      Col 1
    </div>
  </div>
  <div
    className="c3"
  >
    <div
      className="c2"
    >
      Col 2
    </div>
  </div>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      Col 3
    </div>
  </div>
</div>
`;

exports[`Storyshots Atoms | Flexbox Default 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 {
  box-sizing: border-box;
}

.c2 {
  box-sizing: border-box;
  border: 1px solid black;
  background-color: #eee;
  height: 100%;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      Col 1
    </div>
  </div>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      Col 2
    </div>
  </div>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      Col 3
    </div>
  </div>
</div>
`;

exports[`Storyshots Atoms | Flexbox With breakpoint props 1`] = `
.c1 {
  box-sizing: border-box;
}

.c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c0 > *:not(:first-child) {
  padding-top: 16px;
}

.c2 {
  box-sizing: border-box;
  border: 1px solid black;
  background-color: #eee;
  height: 100%;
}

@media (min-width:765px) {
  .c0 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }

  .c0 > *:not(:first-child) {
    padding-top: 24px;
  }
}

@media (min-width:976px) {
  .c0 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    margin-left: -12px;
    margin-right: -12px;
  }

  .c0 > * {
    padding-left: 12px;
    padding-right: 12px;
  }

  .c0 > *:not(:first-child) {
    padding-top: 0;
  }
}

@media (min-width:1292px) {
  .c0 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    margin-left: -20px;
    margin-right: -20px;
  }

  .c0 > * {
    padding-left: 20px;
    padding-right: 20px;
  }

  .c0 > *:not(:first-child) {
    padding-top: 0;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      First element here
    </div>
  </div>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      Second element here
    </div>
  </div>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam dapibus neque in venenatis faucibus. Fusce vitae maximus diam. Ut placerat lacus id porttitor tristique. Mauris in neque tempus, venenatis metus vitae, pellentesque massa. Etiam blandit lacus diam, dignissim posuere massa semper maximus. In pretium commodo nisl sed ultrices. Duis gravida diam ac nisl sodales mollis. Quisque iaculis semper mi, eu interdum elit molestie quis. Vivamus rutrum cursus interdum. Suspendisse vehicula quam mi, a efficitur ante egestas eget.
    </div>
  </div>
</div>
`;

exports[`Storyshots Atoms | Flexbox With conditionally hidden flex item 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 {
  box-sizing: border-box;
  -webkit-order: 1;
  -ms-flex-order: 1;
  order: 1;
}

.c2 {
  box-sizing: border-box;
  border: 1px solid black;
  background-color: #eee;
  height: 100%;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      Col 2
    </div>
  </div>
</div>
`;

exports[`Storyshots Atoms | Flexbox With conditionally visible flex item 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 {
  box-sizing: border-box;
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
}

.c3 {
  box-sizing: border-box;
  -webkit-order: 1;
  -ms-flex-order: 1;
  order: 1;
}

.c2 {
  box-sizing: border-box;
  border: 1px solid black;
  background-color: #eee;
  height: 100%;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      Col 1
    </div>
  </div>
  <div
    className="c3"
  >
    <div
      className="c2"
    >
      Col 2
    </div>
  </div>
</div>
`;

exports[`Storyshots Atoms | Flexbox With container and item props 1`] = `
.c2 {
  box-sizing: border-box;
}

.c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: -10px;
  margin-right: -10px;
}

.c0 > * {
  padding-left: 10px;
  padding-right: 10px;
}

.c0 > *:not(:first-child) {
  padding-top: 0;
}

.c1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 > *:not(:first-child) {
  padding-top: 20px;
}

.c3 {
  box-sizing: border-box;
  border: 1px solid black;
  background-color: #eee;
  height: 100%;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <div
        className="c3"
      >
        First element here
      </div>
    </div>
    <div
      className="c2"
    >
      <div
        className="c3"
      >
        Second element here
      </div>
    </div>
  </div>
  <div
    className="c2"
  >
    <div
      className="c3"
    >
      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam dapibus neque in venenatis faucibus. Fusce vitae maximus diam. Ut placerat lacus id porttitor tristique. Mauris in neque tempus, venenatis metus vitae, pellentesque massa. Etiam blandit lacus diam, dignissim posuere massa semper maximus. In pretium commodo nisl sed ultrices. Duis gravida diam ac nisl sodales mollis. Quisque iaculis semper mi, eu interdum elit molestie quis. Vivamus rutrum cursus interdum. Suspendisse vehicula quam mi, a efficitur ante egestas eget.
    </div>
  </div>
</div>
`;

exports[`Storyshots Atoms | Flexbox With custom gutter 1`] = `
.c1 {
  box-sizing: border-box;
  max-width: 50%;
  -webkit-flex-basis: 50%;
  -ms-flex-preferred-size: 50%;
  flex-basis: 50%;
}

.c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: -10px;
  margin-right: -10px;
}

.c0 > * {
  padding-left: 10px;
  padding-right: 10px;
}

.c0 > *:not(:first-child) {
  padding-top: 0;
}

.c2 {
  box-sizing: border-box;
  border: 1px solid black;
  background-color: #eee;
  height: 100%;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      Col 1
    </div>
  </div>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      Col 2
    </div>
  </div>
</div>
`;

exports[`Storyshots Atoms | Flexbox With direction: column 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  box-sizing: border-box;
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
}

.c3 {
  box-sizing: border-box;
  -webkit-order: 1;
  -ms-flex-order: 1;
  order: 1;
}

.c4 {
  box-sizing: border-box;
  -webkit-order: 3;
  -ms-flex-order: 3;
  order: 3;
}

.c2 {
  box-sizing: border-box;
  border: 1px solid black;
  background-color: #eee;
  height: 100%;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      Col 1
    </div>
  </div>
  <div
    className="c3"
  >
    <div
      className="c2"
    >
      Col 2
    </div>
  </div>
  <div
    className="c4"
  >
    <div
      className="c2"
    >
      Col 3
    </div>
  </div>
</div>
`;

exports[`Storyshots Atoms | Flexbox With height modified 1`] = `
.c1 {
  box-sizing: border-box;
}

.c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 40px;
}

.c2 {
  box-sizing: border-box;
  border: 1px solid black;
  background-color: #eee;
  height: 100%;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      Col 1
    </div>
  </div>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      Col 2
    </div>
  </div>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      Col 3
    </div>
  </div>
</div>
`;
